Work/ITclub/1/backup/v1.0.1/Work.md
# 柏林噪声算法演示项目 - 工作指南

> **📌 指南针文件** - 本文件是新团队成员快速了解项目、规范工作流程的核心指南。任何工作开始前，请完整阅读本文件。

---

## 一、项目概述

### 1.1 项目定位
本项目是一个沉浸式的Web-based教学演示系统，通过可视化与交互式体验深入解析Perlin Noise（柏林噪声）算法。项目采用现代Web技术栈，注重用户体验与教学效果的平衡，是算法教学从传统PPT向交互式体验升级的优秀范例。

### 1.2 核心目标
- **教学目标**：帮助学习者直观理解柏林噪声算法的核心原理与应用
- **技术目标**：展示现代Web技术（Canvas、毛玻璃效果、模块化架构）在教学中的应用
- **体验目标**：提供沉浸式的16:9影院级学习体验，无滚动、全屏展示

---

## 二、项目结构导航

### 2.1 文件架构概览
```
a:\Work\
├── index.html                 # 主入口文件（核心页面结构）
├── css/                       # 样式系统
│   ├── main.css              # 全局样式与CSS变量
│   ├── components.css        # 组件级样式（卡片、时间轴、步骤等）
│   └── visualizations.css    # 可视化专用样式
├── js/                        # 核心脚本
│   ├── main.js               # 主控制器（应用入口）
│   ├── navigation.js         # 导航系统（模块切换）
│   ├── visualizations.js     # 可视化渲染（Canvas绘制）
│   ├── perlin-noise.js       # 算法实现
│   └── utils.js              # 工具函数
├── assets/                    # 静态资源（图片、字体等）
├── Log.log                    # 修改日志（所有变更详细记录）
├── RULE.md                    # 项目规范（★ 必须全文阅读）
├── Work.md                    # 工作指南（本文件）
├── 优化效果说明.md           # 页面优化记录
├── README.md                  # 项目介绍文档
└── USE.md                     # 使用说明文档
```

### 2.2 核心文件说明

**必须完整阅读的文件（按优先级排序）：**

1. **RULE.md** ⭐⭐⭐ **最重要**
   - 项目的"宪法"，所有工作必须严格遵守
   - 包含视觉规范、布局约束、交互规范、技术约束等
   - 特别是【4.4 日志记录规范】章节，每次修改必须遵守
   - 禁止事项明确列出，违反会导致项目质量下降

2. **Work.md** ⭐⭐（本文件）
   - 工作流程指南，提供任务执行的标准步骤
   - 项目结构导航，快速定位文件
   - 注意事项和常见问题解答

3. **优化效果说明.md** ⭐⭐
   - 记录已完成的页面优化内容
   - 避免重复优化和已知问题
   - 提供测试建议和注意事项

4. **README.md** ⭐
   - 项目整体介绍和核心特性
   - 技术架构说明
   - 适用场景和浏览器兼容性

**选择性阅读的文件：**

5. **USE.md** - 用户使用手册
6. **各模块文档** - 具体功能说明

---

## 三、工作流程指南

### 3.1 开始工作前的准备

**步骤1：完整阅读RULE.md**
- 重点理解【1.2 色彩系统】和【1.3 毛玻璃效果规范】
- 牢记【2.1 屏幕比例与适配】的强制要求（16:9，无滚动）
- 掌握【4.4 日志记录规范】的具体格式和要求
- 了解【六、禁止事项】中的所有禁止项

**步骤2：查看Log.log**
- 了解最近的修改记录，避免重复工作
- 理解修改的原因和上下文
- 掌握日志记录的详细程度要求

**步骤3：查看优化效果说明.md**
- 了解已完成的优化内容
- 避免对已优化部分重复修改
- 理解测试建议和注意事项

### 3.2 执行任务的标准流程

**阶段1：任务接收与分析**
1. 明确任务的具体要求和目标
2. 识别涉及的模块和文件
3. 评估是否符合RULE.md规范
4. 如有疑问，立即与项目负责人确认

**阶段1.1：新模块制作与复制任务专项要求**
- **大纲规划**：在制作新模块或执行复制任务前，必须先制定详细的内容大纲，明确模块的教学目标、核心内容和知识点分布
- **任务列表**：使用todo_write工具创建完整的任务清单，涵盖内容开发、视觉设计、交互实现等所有环节，确保任务分解清晰、可执行
- **分页规划**：在制作新模块时，必须根据内容复杂度合理规划分页数量和内容分布，确保符合16:9无滚动要求，每个模块至少包含3个分页
- **复制任务处理**：在进行模块复制等操作时，必须先制定修改计划，明确需要调整的内容和保持的一致性，避免盲目复制导致的内容冲突和风格不一致

**阶段2：制定详细计划**
1. 使用todo_write工具创建任务清单
2. 按优先级排序任务项
3. 预估每个任务的工作量
4. 识别任务间的依赖关系

**阶段3：执行修改**
1. **备份重要文件**（使用read_file先读取内容）
2. 使用replace_in_file进行修改（优先使用，保持文件结构）
3. 或使用write_to_file创建新内容（必要时使用）
4. 每次修改后验证效果（浏览器预览）
5. 检查是否符合RULE.md规范（特别是毛玻璃效果）

**阶段4：记录日志（关键步骤）**
1. 每次文件修改后，立即记录到Log.log，只增不减！
2. 使用指定的详细格式（见RULE.md 4.4章节）
3. 确保包含所有11个字段
4. 验证结果字段必须具体描述验证过程
5. 修改人统一使用"WorkBuddy AI Assistant"

**阶段5：验证与测试**
1. 在1920x1080分辨率下测试（基准分辨率）
2. 在1366x768分辨率下测试（最小支持宽度）
3. 检查无垂直滚动条出现（强制要求）
4. 验证所有交互功能正常
5. 检查毛玻璃效果是否正常显示

**阶段6：任务完成确认**
1. 使用todo_write更新任务状态为completed
2. 提供最终验证结果给用户
3. 展示关键修改的截图或预览
4. 确认所有日志已记录

### 3.3 任务类型与对应工具

| 任务类型 | 主要工具 | 辅助工具 | 必须操作 |
|---------|---------|---------|---------|
| 修改现有文件 | replace_in_file | read_file | 记录日志 |
| 创建新文件 | write_to_file | - | 记录日志 |
| 查看代码结构 | search_file, list_dir | read_file | - |
| 批量查询 | search_content | - | - |
| 任务管理 | todo_write | - | 更新状态 |
| 代码检查 | read_lints | - | 修复错误 |

---

## 四、视觉问题排查工作规范

### 4.1 视觉效果问题排查原则

**核心理念**：不要局限于单一效果，全面考虑所有可能的视觉因素

**问题分析流程**：
1. **识别用户描述**：准确理解用户报告的视觉问题
2. **拓宽排查范围**：不要仅局限于用户提到的特定效果
3. **全面检查相关元素**：
   - 检查渐变覆盖层（::before / ::after 伪元素）
   - 检查背景色变化（hover 状态的 background 属性）
   - 检查阴影变化（box-shadow 的变化）
   - 检查边框变化（border-color 的变化）
   - 检查透明度变化（opacity 的变化）
   - 检查变换效果（transform 的变化）
4. **系统级排查**：确保不遗漏任何可能导致视觉异常的因素

**典型案例**：
- 用户报告"阴影错误" → 实际可能是背景色变化、渐变高亮、边框变化等
- 用户报告"高亮效果" → 可能是渐变层、背景色变化、边框高亮等多种效果的组合
- 用户报告"悬浮异常" → 需要检查所有 hover 相关的 CSS 属性变化

### 4.2 视觉问题修复最佳实践

**修复策略**：
1. **先理解后修复**：在动手修改前，先完整理解问题的所有表现
2. **拓宽排查范围**：不要局限于传统样式认知，考虑所有可能的视觉效果组合
   - 用户描述的"高亮"可能是渐变层、背景色、阴影、边框、位移等多种效果的组合
   - 用户描述的"阴影错误"可能是背景色变化、渐变覆盖、边框变化等其他效果导致
   - 必须全面检查所有 hover 相关的 CSS 属性，而非仅检查用户提到的效果
3. **多维度验证**：修改后检查是否影响其他相关效果
4. **作用域限定**：当需要仅修改特定模块时，使用 ID 选择器（如 #module-3）精确限定作用域
5. **保留其他效果**：确保只移除目标效果，保留其他正常的交互反馈

**修复检查清单**：
- [ ] 确认理解了用户描述的所有视觉问题
- [ ] 检查了所有可能导致该效果的 CSS 属性（不局限于用户提到的效果）
- [ ] 验证了修改不会影响其他模块
- [ ] 保留了正常的交互反馈（阴影、位移等）
- [ ] 在浏览器中实际验证了修复效果

### 4.3 文件修改异常处理规范

**触发场景**：
- 文件内容被意外删除大量内容
- 文件被意外添加大量内容
- 文件结构发生异常变化
- 其他非预期的文件修改

**处理流程**：
1. **立即停止**：发现异常后立即停止当前操作
2. **尝试撤销**：使用 IDE 的撤销功能（Ctrl+Z）恢复到异常前的状态
3. **记忆复原**：如果撤销不可用，根据记忆中的文件原始内容进行复原
4. **禁止直接恢复备份**：不要直接从备份文件夹恢复，因为备份版本可能与当前开发进度不同步
5. **验证复原**：复原后检查文件内容是否完整、正确

**重要原则**：
- ✅ 优先使用撤销操作恢复到异常前的状态
- ✅ 根据记忆复原时，应仔细核对关键代码段
- ❌ 禁止直接从备份恢复（除非万不得已）
- ❌ 不要依赖备份作为首选恢复手段

**预防措施**：
- 在进行大规模修改前，先读取并记录文件当前内容
- 使用小步修改策略，避免一次性修改大量内容
- 每次修改后立即验证效果

---

## 五、重点规范强调

### 5.1 毛玻璃效果（最重要）

**必须应用的场景：**
- ✅ 所有卡片式内容容器
- ✅ 导航栏与工具栏背景
- ✅ 模态对话框与浮动面板
- ✅ 可视化控制区域

**实现标准：**
```css
/* 必须同时包含以下属性 */
background: var(--glass-bg);           /* rgba(255,255,255,0.08) */
backdrop-filter: var(--glass-blur);    /* blur(12px) */
border: var(--glass-border);           /* 1px solid rgba(255,255,255,0.1) */
box-shadow: var(--glass-shadow);       /* 0 8px 32px rgba(0,0,0,0.3) */
```

**检查方法：**
1. 视觉上应该有半透明模糊效果
2. 边框应该是半透明的，不是纯色
3. 阴影应该从底部投射，颜色是蓝色系而非纯黑
4. 不同层级透明度有差异（0.08、0.06、0.04）

### 5.2 布局约束（严格禁止事项）

**❌ 绝对禁止：**
- 任何导致垂直滚动的设计
- 超过视口高度的内容堆叠
- 页面级滚动条出现
- 需要拖拽滚动条浏览内容
- 内容溢出无处理

**✅ 正确处理：**
- 使用 `overflow: hidden` 禁止滚动
- 内容垂直溢出时，考虑分页或删减内容
- 使用 `calc(100vh - 80px)` 计算可用高度
- 定期检查不同分辨率下无滚动条

### 5.3 色彩系统

**必须使用品牌色系：**
- 主色：`#2962ff`（科技蓝）
- 成功色：`#00c853`（正向反馈）
- 错误色：`#ff5252`（问题标识）
- 文本层级：主白 `#ffffff` → 次文本 `#e0e7ff` → 弱文本 `#b8c2ff`

**禁止使用的颜色：**
- 纯黑背景（应使用深蓝色 `#0a0d1a`）
- 非品牌色系的颜色
- 不透明边框（必须使用半透明）

### 5.4 英文翻译规范

**翻译原则：简单易懂，初一水平**

**具体要求：**
1. **词汇难度**：使用初中一年级学生能理解的词汇
   - ✅ 简单：`game`, `world`, `mountain`, `river`, `smooth`
   - ❌ 复杂：`procedural`, `algorithm`, `interpolation`, `gradient`

2. **句子结构**：使用简单句，避免复杂从句
   - ✅ 简单：`Each point jumps randomly. No pattern.`
   - ❌ 复杂：`Each point independently generates height values in a completely random manner without any discernible pattern.`

3. **专业术语处理**：
   - 首次出现时保留英文 + 中文解释
   - 例如：`Perlin Noise (柏林噪声)` → `Perlin Noise`
   - 后续可单独使用英文术语

4. **文化适应性**：
   - 避免中文特有的成语、俗语
   - 使用国际通用的表达方式
   - 例如：`找到平衡` → `find balance` (而不是`找到平衡点`)

5. **语气风格**：
   - 友好、鼓励性语气
   - 使用第二人称 `you`, `your`
   - 避免过于正式或学术化

**翻译检查清单：**
- [ ] 词汇是否简单（初中水平）？
- [ ] 句子是否简短（不超过 20 个单词）？
- [ ] 是否避免了复杂语法（从句、被动语态）？
- [ ] 专业术语是否有解释？
- [ ] 语气是否友好自然？

### 5.5 日志记录规范

**执行修改前必读 RULE.md 4.4 章节**

**日志格式检查清单：**
- [ ] 包含完整的分隔线（80 个=字符）
- [ ] 修改时间精确到秒（北京时间）
- [ ] 修改类型准确（新增/修改/删除/优化）
- [ ] 修改文件使用完整相对路径
- [ ] 修改位置描述具体清晰
- [ ] 修改内容使用项目符号详细列出
- [ ] 包含参数调整的旧值和新值
- [ ] 修改原因关联具体需求
- [ ] 相关任务使用任务 ID 或描述
- [ ] 验证状态明确（未验证/已验证/部分验证）
- [ ] 验证结果具体描述验证过程
- [ ] 修改人统一为"WorkBuddy AI Assistant"

**日志记录时机：**
- ✅ 每次 replace_in_file 后立即记录
- ✅ 每次 write_to_file 后立即记录
- ✅ 批量修改时，每个文件修改后都记录
- ❌ 不要等所有任务完成后再统一记录

---

## 五、常见问题与解答

### Q1: 如何确保不违反"无垂直滚动"的规范？

**A1:**
1. 设计时始终以1920x1080为基准
2. 使用浏览器开发者工具模拟不同分辨率
3. 定期检查 `html, body { overflow: hidden; }` 是否生效
4. 内容过多时考虑分页，而不是增加高度
5. 使用 `calc(100vh - 80px)` 计算主内容区高度

### Q2: 毛玻璃效果不显示或显示异常怎么办？

**A2:**
1. 检查是否同时设置了 `background`, `backdrop-filter`, `border`, `box-shadow`
2. 确认浏览器支持 `backdrop-filter`（Chrome 80+）
3. 检查层级关系，父元素是否设置了 `overflow: hidden` 导致裁剪
4. 使用 `@supports` 查询进行特性检测
5. 参考RULE.md 1.3章节的完整实现示例

### Q3: 日志记录应该详细到什么程度？

**A3:**
参考Log.log中的示例，应该包含：
- 具体的CSS属性变化（如：`max-width: calc(100% - 200px)`）
- 颜色值的具体变化（如：从`#000000`改为`#2962ff`）
- 布局调整的详细描述（如：从横向改为竖向，添加了左侧间距60px）
- 验证过程的具体步骤（如：在1920x1080和1366x768分辨率下测试）
- 使用项目符号列出所有修改点

### Q4: 任务执行中遇到不确定的问题怎么办？

**A4:**
1. 立即停止当前工作
2. 查阅RULE.md相关章节
3. 查看Log.log中类似任务的记录
4. 查看优化效果说明.md中是否有相关说明
5. 如果仍不确定，使用ask_followup_question工具向用户确认
6. 不要凭猜测继续执行

### Q5: 如何确保色彩系统符合规范？

**A5:**
1. 只使用CSS变量（如 `var(--color-primary)`），不要硬编码颜色值
2. 参考RULE.md 1.2章节的色彩定义
3. 检查是否正确使用了功能色彩（success/warning/danger）
4. 文本使用层级色彩系统（text-primary/text-secondary/text-muted）
5. 卡片背景使用毛玻璃变量，不要使用纯色

---

## 六、快速开始检查清单

### 新团队成员加入时：

- [ ] 完整阅读 RULE.md（特别是 5.4 日志记录规范）
- [ ] 阅读 Work.md（本文件）了解工作流程
- [ ] 查看 Log.log 了解最近修改历史
- [ ] 查看 优化效果说明.md 了解已完成优化
- [ ] 在浏览器中打开项目，熟悉7个模块的内容
- [ ] 检查浏览器控制台是否有错误
- [ ] 测试不同分辨率下的显示效果
- [ ] 尝试修改一个小地方并记录日志（练习）

### 开始新任务时：

- [ ] 明确任务要求和目标
- [ ] 使用todo_write创建任务清单
- [ ] 识别涉及的文件和模块
- [ ] 检查RULE.md是否有相关规范
- [ ] 查看Log.log避免重复工作
- [ ] 备份重要文件（read_file）
- [ ] 执行修改并实时预览
- [ ] 每次修改后立即记录日志
- [ ] 完成任务后更新todo状态
- [ ] 提供验证结果给用户

---

## 七、重要提醒

### ⚠️ 必须遵守的底线

1. **无滚动是铁律**：任何导致垂直滚动的设计都是严重违规
2. **毛玻璃是标配**：所有卡片必须应用毛玻璃效果，纯色背景是违规
3. **日志是凭证**：没有日志记录的修改等于没做，无法追溯
4. **规范是法律**：RULE.md是项目最高准则，违反需要重新修改
5. **测试是必需**：每次修改后必须在1920x1080和1366x768下测试

### 💡 最佳实践建议

1. **小步快跑**：每次修改范围不要太大，便于验证和回滚
2. **频繁验证**：每修改一个文件就验证一次，不要等全部完成
3. **详细记录**：日志越详细越好，三个月后还能看懂
4. **主动沟通**：不确定时立即询问，不要猜测
5. **保持一致**：遵循已有的代码风格和命名规范

---

## 八、联系方式与支持

### 项目相关文件
- 项目规范：`a:\Work\RULE.md`
- 工作指南：`a:\Work\Work.md`（本文件）
- 优化记录：`a:\Work\优化效果说明.md`
- 修改日志：`a:\Work\Log.log`
- 项目介绍：`a:\Work\README.md`
- 使用说明：`a:\Work\USE.md`

### 遇到问题时的求助顺序
1. 查阅 RULE.md 相关章节
2. 查看 Work.md 常见问题
3. 查看 Log.log 历史记录
4. 查看 优化效果说明.md
5. 向项目负责人咨询

---

> **最后提醒**：
> 
> 本文件是工作的"指南针"，不是"紧箍咒"。规范的目的是确保项目质量，提升团队协作效率。熟练后会发现，遵循规范反而让工作更简单、更高效。
> 
> **记住：先读RULE.md，再看Work.md，然后看Log.log，最后开始工作！**

---

**文档版本**：1.0  
**最后更新**：2025-03-15  
**维护人**：WorkBuddy AI Assistant
